plugins {
    id 'java'
    id 'jacoco'
    id 'io.franzbecker.gradle-lombok' version '3.1.0'
    id 'com.adarshr.test-logger'
}

dependencies {
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'net.sourceforge.owlapi:owlapi-distribution:5.1.11'
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'org.slf4j:slf4j-simple:1.7.25'
    implementation 'io.vavr:vavr:0.10.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
    testImplementation 'org.assertj:assertj-core:3.13.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
}

compileJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
    sourceCompatibility = 13
    targetCompatibility = 13
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    maxHeapSize = '1G'
    ignoreFailures = false
    failFast = true

    filter {
        includeTestsMatching "*Test"
    }
}

